--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "buefy": "^0.7.5",
     "bulma": "^0.7.4",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
