--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "animate.css": "^3.7.0",
     "buefy": "^0.7.5",
     "bulma": "^0.7.4",
+    "lodash.debounce": "^4.0.8",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
-    "vue-scrollto": "^2.15.0"
+    "vue-scrollto": "^2.15.0",
+    "vue-social-sharing": "^2.4.3"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.8.1",
