--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@panter/vue-i18next": "^0.15.1",
     "animate.css": "^3.7.0",
     "buefy": "^0.7.5",
     "bulma": "^0.7.4",
+    "i18next": "^17.0.4",
+    "i18next-browser-languagedetector": "^3.0.1",
+    "i18next-xhr-backend": "^3.0.0",
     "lodash.debounce": "^4.0.8",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vue-scrollto": "^2.15.0",
-    "vue-social-sharing": "^2.4.3"
+    "vue-social-sharing": "^2.4.3",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.8.1",
